--- a/myblog/templates/myblog/post_list.html
+++ b/myblog/templates/myblog/post_list.html
@@ -7,16 +7,14 @@
             <h1><a href="/">My blog</a></h1>
         </div>
 
-        <div>
-            <p>создан: 16.12.2023, 14:04</p>
-            <h2><a href="">Мой первый пост</a></h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae nisi nam asperiores corporis, dolores voluptas illum odit sequi ullam exercitationem sint tempore cum, repudiandae velit ducimus assumenda, deleniti sunt ut?</p>
-        </div>
-
-        <div>
-            <p>создан: 16.12.2023, 14:09</p>
-            <h2><a href="">Мой второй пост</a></h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae nisi nam asperiores corporis, dolores voluptas illum odit sequi ullam exercitationem sint tempore cum, repudiandae velit ducimus assumenda, deleniti sunt ut?</p>
-        </div>
+        {% for post in posts %}
+            <div>
+                <p>Создан: {{post.published_date }}</p>
+                <h1>
+                    <a href="">{{ post.title }}</a>
+                </h1>
+                <p>{{ post.text|linebreaksbr }}</p>
+            </div>
+        {% endfor %}
     </body>
 </html>
