--- a/myblog/templates/myblog/post_list.html
+++ b/myblog/templates/myblog/post_list.html
@@ -1,20 +1,13 @@
-<html>
-    <head>
-        <title>My blog</title>
-    </head>
-    <body>
-        <div>
-            <h1><a href="/">My blog</a></h1>
-        </div>
+{% extends 'myblog/base.html' %}
 
-        {% for post in posts %}
-            <div>
-                <p>Создан: {{post.published_date }}</p>
-                <h1>
-                    <a href="">{{ post.title }}</a>
-                </h1>
-                <p>{{ post.text|linebreaksbr }}</p>
+{% block content %}
+    {% for post in posts %}
+        <div class="post">
+            <div class="date">
+                {{ post.published_date }}
             </div>
-        {% endfor %}
-    </body>
-</html>
+            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+            <p>{{ post.text|linebreaksbr }}</p>
+        </div>
+    {% endfor %}
+{% endblock %}
